re PR fortran/46201 ([F03] ICE on procedure pointer component call)

2010-12-13  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/46201
	* trans-expr.c (gfc_conv_procedure_call): Handle procedure pointer
	components called on a dimensionful base object.

2010-12-13  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/46201
	* gfortran.dg/proc_ptr_comp_27.f90: New.

From-SVN: r167767