gcc/testsuite/gfortran.dg/proc_ptr_comp_27.f90
@@ -1,0 +1,12 @@
+! { dg-do compile }
+!
+! PR 46201: [F03] ICE on procedure pointer component call
+!
+! Contributed by Stephen J. Bespalko <sjbespa@comcast.net>
+
+type t
+  procedure(character), nopass, pointer :: ppc
+end type
+type(t),dimension(1) :: v
+print *,v(1)%ppc()
+end
